Week 5 discussion added, fixed text-align on footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -284,4 +284,5 @@ footer {
 footer p {
   padding-left: 2rem;
   padding-right: 2rem;
+  text-align: center;
 }
